@@ -71,6 +71,16 @@ namespace __gnu_cxx
       : _M_file(__f), _M_unget_buf(traits_type::eof())
       { }
 
+      /**
+       *  @return  The underlying FILE*.
+       *
+       *  This function can be used to access the underlying "C" file pointer.
+       *  Note that there is no way for the library to track what you do
+       *  with the file, so be careful.
+       */
+      std::__c_file* const
+      file() { return this->_M_file; }
+
     protected:
       int_type
       syncgetc();
